add chapters endpoint
